# ski-bt-controller

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: main.cpp
src/controller/: bt_controller.h
